a killer feature :p).
- Added the possibility to set the absolute path of the Gngeo
executable. It may be interesting if the `gngeo' command
isn't in your PATH or if you have several versions of Gngeo
installed.
- Added support for the ``screen320" option.
- The fullname of a manually loaded Rom is now displayed in
the status bar too (if its MAME name is recognized).
- Bugfix: Gngeo is now killed if you want to quit XGngeo when
that one was still running.


* Changes in version 14 (2003-12-31):

- Many new configurable things: auto start roms, preview
images directory, history, etc. ^_^
- XGngeo still usable while running Gngeo (game may be
stopped from interface).
- Some interface improvement.
- XGngeo can now be run from any location without problem
(images not loaded, etc.). ^^
- Full support of GGF's xml file to get rom informations.
- Updated documentation.
- A small source code cleaning. :p


* Changes in version 13 (2003-11-23):

- New configurable options: Neo Geo type (arcade or home),
country and interpolation.
- Display of the Gngeo version used, in the "about" window.
- Now, in the Roms list, only available roms are shown by
default.
- New Portuguese translation by Paulo Eduardo Chiva.
- Updated documentation.


* Changes in version 12 (2003-10-25):

- Added a (amazing ^o^) keys configurator!
- Added an Audio section to the configuration... ^_^
- Moving of the "lang/" directory into the brand new "data/" 
directory ^^
- Move of images into "data/img/".


* Changes in version 11 (2003-09-25):

- New "History" menu which allow you to load one of last 
5 roms loaded. ^^
- A "Configuration error!" dialog appears if some parameters
looks strange :p
- Bigger (+10px!) main window's width.
- New Polish translation of XGngeo by Matma.
- New configurable option: Auto Frameskip.
- Added a documentation in pdf format (into "doc/").
- New localized README files: README-fr.txt; README-es.txt and
README-pl.txt.