@@ -25,8 +25,10 @@ installed.
 - Added support for the ``screen320" option.
 - The fullname of a manually loaded Rom is now displayed in
 the status bar too (if its MAME name is recognized).
-- Bugfix: Gngeo is now killed if you want to quit XGngeo when
-that one was still running.
+- Bugfix: Gngeo wasn't killed when you want to quit XGngeo
+while the emulator was running.
+- Bugfix: XGngeo crashed if it didn't find gngeo's configura-
+tion file.
 
 
 * Changes in version 14 (2003-12-31):
